Update travis scripts
And it removes gitlab-ci.yml.

--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -8,7 +8,7 @@ control_brace_style = "AlwaysSameLine"
 # disable_all_formatting = false
 error_on_line_overflow = false # true
 # error_on_unformatted = false
-fn_args_density = "Tall"
+fn_args_layout = "Tall"
 brace_style = "PreferSameLine" # "SameLineWhere"
 empty_item_single_line = true
 enum_discrim_align_threshold = 0
