--- a/.travis.yml
+++ b/.travis.yml
@@ -8,16 +8,26 @@ matrix:
     - rust: nightly
 
 install:
-  - |
-      pip install 'travis-cargo<0.2' --user &&
-      export PATH=$HOME/.local/bin:$PATH
+  - rustup set profile minimal || exit 1;
+  - rustup toolchain install nightly-2019-10-13 || exit 1;
+  - rustup component add rustfmt --toolchain nightly-2019-10-13 || exit 1;
+  - rustup component add clippy --toolchain nightly-2019-10-13 || exit 1;
+
+before_script:
+  - cargo fetch --verbose
 
 script:
-  - |
-      travis-cargo build &&
-      travis-cargo build -- --release &&
-      travis-cargo test &&
-      travis-cargo test -- --release &&
-      travis-cargo bench &&
-      travis-cargo --only stable doc
+  - cargo +nightly-2019-10-13 fmt -- --check
+  - cargo +nightly-2019-10-13 clippy --all --all-targets -- -D warnings
+  - cargo build
+  - cargo test
+  - cargo bench
 
+cache:
+  timeout: 1000
+  cargo: true
+  directories:
+    - "$HOME/.rustup"
+before_cache:
+  - rm -rf $HOME/.cargo/registry
+  - rm -rf $TRAVIS_BUILD_DIR/target
